auto-test/tests/chapter_18/invalid_parse/extra_credit/union_member_is_function.c
union s {
    
    
    
    int foo(void);
};